--- a/Upyourcloud/app/src/main/AndroidManifest.xml
+++ b/Upyourcloud/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.sukee.upyourcloud">
+    package="com.example.sukee.upyourcloud" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Login">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+        <activity android:name=".Login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,11 @@
         <activity android:name=".Share" />
         <activity android:name=".MyDevices" />
         <activity android:name=".MyDrive" />
-        <activity android:name=".Updates"></activity>
+        <activity android:name=".Updates" />
+        <activity
+            android:name=".NaviDrawer"
+            android:label="@string/title_activity_navi_drawer" >
+        </activity>
     </application>
 
 </manifest>
