--- a/Upyourcloud/app/build.gradle
+++ b/Upyourcloud/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "com.example.sukee.upyourcloud"
+        applicationId "com.nas.upyourcloud"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
